--- a/style.css
+++ b/style.css
@@ -195,10 +195,11 @@ body {
 
 /* Kuchipachi Button aka bio page direct */
 #btn-intro {
+    position: absolute;
     width: 103px;
     height: 98px;
     top: 361px;
-    right: 265 px;
+    right: 265px;
     background-image: url('Attachments/homepageimage/kuchipachi0.png');
 }
 
@@ -264,8 +265,17 @@ body {
     right: 198px;
     background-image: url('Attachments/homepageimage/book0.png');
 }
+
+#bookicon1: {
+    width: 117px;
+    height: 92px;
+    top: 514 px;
+    right: 198 px;
+    background-image: url('Attachments/homepageimage/book1.png');
+}
+
 #btn-books:active {
-    animation: introFlicker 1.5s ease-in-out 2 alternate url('Attachments/homepageimage/bookicon1.png');
+    animation: introFlicker 1.5s ease-in-out 2 alternate;
 }
 
 /* Face Meme Button aka exiting tab */
