--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ body {
     top: 84px;
     left: 416px;
     background-image: url('Attachments/homepageimage/Edisonlamp_L.png');
+    animation: flickerIntermittent 5s infinite;
 }
 
 /* Top Middle Lamp (Always ON) */
@@ -149,6 +150,8 @@ body {
     left: 548px;
     background-image: url('Attachments/homepageimage/Edisonlamp_R.png');
     z-index: 20;
+    animation: flickerIntermittent 5s infinite;
+    animation-delay: 2s;
 }
 
 /* Bottom Left Lamp */
@@ -160,6 +163,7 @@ body {
     left: 419px;
     z-index: 20;
     background-image: url('Attachments/homepageimage/LBottomLight.png');
+    animation: flickerFast 0.5s infinite;
 }
 
 /* Bottom Right Lamp */
@@ -171,16 +175,18 @@ body {
     left: 1496px;
     z-index: 20;
     background-image: url('Attachments/homepageimage/RBottomLight.png');
+    animation: flickerFast 0.5s infinite;
+    animation-delay: 2s;
 }
 
 /* Flickering Lamp Animation */
 @-webkit-keyframes lampFlicker {
     0%, 100% { opacity: 1; }
-    50% { opacity: 0.3; }
+    50% { opacity: 0.22; }
 }
 @keyframes lampFlicker {
     0%, 100% { opacity: 1; }
-    50% { opacity: 0.3; }
+    50% { opacity: 0.18; }
 }
 
 /* Flicker lamps on elevator open */
