--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     margin: 0;
     overflow: hidden;
     position: relative;
-    z-index: 0;
+    z-index: 5;
     background-color: #000000; /* fallback background color */
 }
 
@@ -51,8 +51,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 334;
-    height: 523;
+    width: 334px;
+    height: 523px;
     background-image: url('Attachments/homepageimage/doorframe.png');
     background-size: contain;
     background-repeat: no-repeat;
